--- a/app/views/report/show.html.erb
+++ b/app/views/report/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Report#show</h1>
-<p>Find me in app/views/report/show.html.erb</p>
+<h1>View Report</h1>
+<p>Lat: <%= @report.lat %></p>
+<p>Long: <%= @report.long %></p>
+<p>Description: <%= @report.description %></p>
+<p>Why this is important: <%= @report.why %></p>
